          embedded content conflict markers and "diff3opts=[...]" and
          "sdiffopts=[...]" for passing arbitrary options to the used
          "diff3" and "sdiff" tools. When used in combination with "mtn
          merge_into_workspace" this way one especially can achieve a
          CVS/SVN style non-modal workspace-based merging.

        Bugs fixed

        - mtn automate heads called without a branch argument now properly
          returns the head revisions of the workspace's branch if called
          over mtn automate stdio

        - mtn commit no longer crashes if it creates a revision whose
          roster already exists, i.e. was left behind by the command
          `mtn db kill_rev_locally REV` (savannah #18990) 

        Documentation changes

        - the documentation of the "--revs-only" (formerly "--brief")
          switch for the annotate command didn't match its actual
          behavior, this has been fixed

        Other

        - contrib/usher.cc has been removed. Please use the
          net.venge.monotone.contrib.usher branch instead.

        Internal

        - Update SQLite to 3.4.1.

        - Update Lua to 5.1.2 plus latest bug fixes.



Fri Aug  3 06:08:36 UTC 2007

        0.36 release.

        Changes

        - The help command is now able to show documentation on subcommands
          (such as 'attr set').

        - The help command now shows a brief abstract of each command,
          instead of only listing their names.

        - The command `list changed` now outputs the new path of any
          renamed item making it easier to copy and paste these paths
          for external program usage.

        - `automate attributes` has been renamed to `automate get_attributes`,
          also a bug has been fixed there so resurrected attributes are now
          properly outputted as "new" and not "changed".

        New features

        - Two new commands to set and drop attributes over automate: